--- a/assets/css/menustyles.css
+++ b/assets/css/menustyles.css
@@ -1,11 +1,13 @@
 /* Import Google font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 .newhtmldiv {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(to left top, #eb30a1, #811194);
+  min-height: 100vh;
 }
 .newhtmlbody {
   display: flex;
