--- a/assets/menuhtml/style.css
+++ b/assets/menuhtml/style.css
@@ -117,9 +117,6 @@ body {
   }
 }
 
-
-
-
 article.card {   
   overflow: hidden;
 }
@@ -128,7 +125,8 @@ article.card .thumb {
   margin-top: 10rem; 
 }
 .infos {  
-  margin-top: 27rem; 
+  margin-top: 29rem; 
+  min-height: 120%;
   position: relative; 
   background: #fff;
   transition: 0.4s 0.15s cubic-bezier(0.17, 0.67, 0.5, 1.03);
@@ -136,7 +134,6 @@ article.card .thumb {
 }
 .infos .title {
   position: relative; 
-  margin-top: 24px;
   color: #152536;
   font-family: "Grotesque Black", sans-serif;
   font-size: 1rem;
@@ -150,7 +147,9 @@ article.card .thumb {
   color: rgba(21, 37, 54, 0.7);
   opacity: 0;
   transition: 0.5s 0.25s cubic-bezier(0.17, 0.67, 0.5, 1.03);
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .infos .details {
   color: var(--first-color);
